// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Logo /> doesn't break if width and hight are not passed 1`] = `
<a
  className="py-2"
  href="/"
  onClick={[Function]}
>
  <img
    alt=""
    height={50}
    src="logo.svg"
    width={50}
  />
</a>
`;

exports[`<Logo /> renders without crashing 1`] = `
<a
  className="py-2"
  href="/"
  onClick={[Function]}
>
  <img
    alt=""
    height={30}
    src="logo.svg"
    width={30}
  />
</a>
`;
